Wed Sep 12 22:17:01 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: added debug dumping in both subdrivers.

Wed Sep 12 22:12:53 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 * drivers/megatec.c:
   - One more entry in the "batteries" array.
   - Nominal battery value is now a float (some models need this).
 * data/driver.list:
   - Two more models supported by megatec.

Tue Sep 11 14:21:17 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - clients/upsclient.h: add a typedef UPSCONN on UPSCONN_t since
   the renaming of the former broke the external client application
   compatibility. This is only temporary, and client applications
   will have to adapt their code, using pkg-config / libupclient-config
   and some #defines.
 - UPGRADING: add a (doubled for both 2.2.0 and 2.2.1) message to warn
   client applications developers of the above change.

Tue Sep 11 12:47:10 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - data/driver.list: Added MGE Office Protection Systems compatibility
   information.

Mon Sep 10 11:36:16 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/usbhid-ups.c:
   - The driver will now reconnect when it finds that another program
     has claimed the USB device it uses.
   - Cleaned up indentation.
   - Changed the way how 'input.transfer.reason' is treated.
 * drivers/mge-hid.c,tripplite-hid.c:
   - Changed 'input.transfer.reason'.

Sun Sep  9 19:14:46 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/belkin-hid.[ch]: Version should not be defined in .h
   file to prevent needless rebuilds of the usbhid-ups.o (it was
   duplicated in both and I removed the wrong instance).
 - drivers/libhid.[ch]: The hidparser.h file should not be included
   in the header file.
 - drivers/libshut.c: Don't allocate space for the report descriptor
   dynamically. We already know the maximum size and don't need it
   anymore after leaving the open function.